fixed overflow

--- a/css/master.scss
+++ b/css/master.scss
@@ -111,7 +111,7 @@ header {
     top: 218rem;
     z-index: 1;
     opacity: 0.2;
-    transform: rotate(60deg) scale(1.5);
+    transform: rotate(60deg) scale(0.8);
 }
 
 footer {
